--- a/src/MealGenius/css/TableResults.css
+++ b/src/MealGenius/css/TableResults.css
@@ -3,11 +3,15 @@
 .table-container {
     margin: 20px auto;
     padding: 10px;
-    max-width: 90%;
+    max-width: 70%;
     border: 1px solid #ddd;
     border-radius: 8px;
     background-color: #f9f9f9;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .table-container table {
@@ -16,12 +20,13 @@
     font-family: Arial, sans-serif;
     font-size: 16px;
     color: #333;
+    text-align: center; /* Centrare il testo */
 }
 
 .table-container th,
 .table-container td {
     padding: 12px 15px;
-    text-align: left;
+    text-align: center; /* Centrare il testo */
     border-bottom: 1px solid #ddd;
 }
 
